updated memes title font

--- a/src/components/Memes.module.css
+++ b/src/components/Memes.module.css
@@ -77,7 +77,7 @@
 
   .title{
     color: white;
-    font-family: var(--font-pure-joy);
+    font-family: var(--font-samarkan);
     margin: 0;
   }
 
