--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     background-repeat:no-repeat;
-    background-image: url("../images/bg.png");
+    background-image: url("../images/About/bg.png");
     background-size: cover;
     position: relative;
     overflow: hidden;
