--- a/src/components/Memes.module.css
+++ b/src/components/Memes.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
     background-repeat:no-repeat;
     background-size: cover;
-    background-image:url("../images/stars.png");
+    background-image:url("../images/Memes/bg.png");
     position: relative;
     overflow: hidden;
 }
