--- a/src/components/Section1.module.css
+++ b/src/components/Section1.module.css
@@ -113,8 +113,7 @@
     }
 
     .body{
-        padding: 100px;
-        padding-top:75px;
+        padding: 50px;
         gap:25px;
     }
 
@@ -155,8 +154,9 @@
     }
 
     .penguin{
-        bottom:-20%;
-        height:300px;
+        content: url('../images/Section1/image2.png');
+        bottom:-24%;
+        height:350px;
         object-fit: contain;
     }
 
@@ -176,7 +176,6 @@
 
     .body{
         padding: 100px;
-        padding-top:100px;
         gap:25px;
     }
 
@@ -217,8 +216,9 @@
     }
 
     .penguin{
+        content: url('../images/Section1/image2.png');
         bottom:-30%;
-        height:600px;
+        height:650px;
         object-fit: contain;
     }
   }
@@ -237,7 +237,6 @@
 
     .body{
         padding: 100px;
-        padding-top:150px;
         gap:25px;
     }
 
@@ -278,9 +277,9 @@
     }
 
     .penguin{
+        content: url('../images/Section1/image.png');
         bottom:-40%;
-        width:800px;
-        height:800px;
+        height:850px;
         object-fit: contain;
     }
 
@@ -305,7 +304,6 @@
 
     .body{
         padding: 100px;
-        padding-top:150px;
         gap:25px;
     }
 
@@ -346,8 +344,8 @@
     }
 
     .penguin{
-        bottom:-50%;
-        width:1000px;
+        content: url('../images/Section1/image.png');
+        bottom:-40%;
         height:1000px;
         object-fit: contain;
     }
