updated about font

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Bahiana&family=Barriecito&family=Barrio&family=Bubbler+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Da:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand:wght@400&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +13,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
   --font-samarkan:"Samarkan";
   --font-bbt:"Bbt";
+  --font-pure-joy: "Pure Joy";
+  --font-bahiana:Bahiana;
+  --font-barrio:Barrio;
+  --font-barriecito:Barrio;
+  --font-bubbler:"Bubbler One";
+  --font-average:"Average Sans";
+
+  --font-patrick-hand: "Patrick Hand";
+  --font-patrick-hand-SC: "Patrick Hand SC";
+  --font-baloo-da: "Baloo Da";
+  --font-annie-use-your-telescope: "Annie Use Your Telescope";
 }
 
 @font-face {
