--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -9,7 +9,7 @@
     background-image: url("../images/About/bg.png");
     background-size: cover;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
   
   .subwrapper{
@@ -49,7 +49,16 @@
   .text{
     color:white;
     margin: 0;
-    font-family: var(--font-bbt);
+    font-family: var(--font-patrick-hand);
+  }
+
+  .banner{
+    position: absolute;
+    width: 100%;
+    height: 75px;
+    left: 0;
+    object-fit:cover;
+    z-index: 1;
   }
 
   @media screen and (max-width:500px) {
@@ -93,6 +102,11 @@
         font-size: 14px;
         line-height:18px;
         text-align: center;
+    }
+
+    .banner{
+        height: 60px;
+        top: -30px;
     }
 
   }
@@ -140,6 +154,11 @@
         text-align: center;
     }
 
+    .banner{
+        height: 80px;
+        top: -40px;
+    }
+
   }
 
   @media screen and (min-width:1024px) and (max-width:1920px) {
@@ -185,6 +204,11 @@
         text-align: start;
     }
 
+    .banner{
+        height: 100px;
+        top: -50px;
+    }
+
   }
 
   @media screen and (min-width:1921px){
@@ -222,6 +246,11 @@
         font-size: 24px;
         line-height:44px;
         text-align: start;
+    }
+
+    .banner{
+        height: 150px;
+        top: -75px;
     }
 
   }
