--- a/src/components/Memes.module.css
+++ b/src/components/Memes.module.css
@@ -9,7 +9,7 @@
     background-size: cover;
     background-image:url("../images/Memes/bg.png");
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
   
   .subwrapper{
@@ -40,7 +40,6 @@
     left: 0;
     object-fit:cover;
     z-index: 1;
-    top: 0%;
   }
 
   .titlewrapper{
@@ -57,6 +56,7 @@
     justify-content: center;
     align-items: center;
     justify-items: center;
+
   }
 
   .image{
@@ -66,6 +66,8 @@
     align-items: center;
     object-fit: cover;
     border-color: black;
+    animation: swing 2s infinite ease-in-out;
+    transform-origin: top center; 
   }
 
   .bg{
@@ -111,6 +113,11 @@
         font-size: 70px;
     }
 
+    .banner{
+        height: 60px;
+        top: -30px;
+    }
+
   }
 
   @media screen and (min-width:501px) and (max-width:1023px) {
@@ -123,10 +130,6 @@
     .body{
         padding: 30px;
         gap:25px;
-    }
-
-    .banner{
-        height: 100px;
     }
 
     .imageswrapper{
@@ -143,6 +146,11 @@
         font-size: 80px;
     }
 
+    .banner{
+        height: 80px;
+        top: -40px;
+    }
+
   }
 
   @media screen and (min-width:1024px) and (max-width:1920px) {
@@ -157,10 +165,6 @@
         gap: 75px;
     }
 
-    .banner{
-        height: 150px;
-    }
-
     .imageswrapper{
         grid-template-columns: 1fr 1fr 1fr;
         gap: 30px;
@@ -173,6 +177,11 @@
 
     .title{
         font-size: 120px;
+    }
+
+    .banner{
+        height: 100px;
+        top: -50px;
     }
 
   }
@@ -193,10 +202,6 @@
         gap: 75px;
     }
 
-    .banner{
-        height: 150px;
-    }
-
     .imageswrapper{
         grid-template-columns: 1fr 1fr 1fr;
         gap: 50px;
@@ -211,5 +216,28 @@
         font-size: 140px;
     }
 
+    .banner{
+        height: 150px;
+        top: -75px;
+    }
+
+  }
+
+  @keyframes swing {
+    0% {
+      transform: rotate(3deg);
+    }
+    /* 25% {
+      transform: rotate(5deg);
+    } */
+    50% {
+      transform: rotate(-3deg);
+    }
+    /* 75% {
+      transform: rotate(-5deg);
+    } */
+    100% {
+      transform: rotate(3deg);
+    }
   }
 
