--- a/src/components/Memes.module.css
+++ b/src/components/Memes.module.css
@@ -7,7 +7,6 @@
     justify-content: center;
     background-repeat:no-repeat;
     background-size: cover;
-    background-image:url("../images/Memes/bg.png");
     position: relative;
     /* overflow: hidden; */
 }
@@ -88,6 +87,7 @@
     .mainwrapper{
         max-height:2150px;
         min-height:2100px;
+        background-image:url("../images/Memes/bg2.png");
     }
 
     .body{
@@ -125,6 +125,7 @@
     .mainwrapper{
         max-height:750px;
         min-height:700px;
+        background-image:url("../images/Memes/bg.png");
     }
 
     .body{
@@ -158,6 +159,7 @@
     .mainwrapper{
         max-height: 1400px;
         min-height: 1350px;
+        background-image:url("../images/Memes/bg.png");
     }
 
     .body{
@@ -191,6 +193,7 @@
     .mainwrapper{
         max-height: 1650px;
         min-height: 1600px;
+        background-image:url("../images/Memes/bg.png");
     }
 
     .subwrapper{
